# zksjgj

./: .editorconfig  .gitignore  README.md  app.py  pyproject.toml  ruff.toml  run_regression_tests.py  代码审查报告.md  优化实施报告.md  优化汇总报告.md  开发环境配置指南.md  打包exe.bat  技术提升行动清单.md  示例_文档字符串模板.py  资深开发者代码质量审查报告.md  钻孔数据编辑工具.spec
borehole_app/: __init__.py  models.py  parser.py  project.py  settings.py  ui_basic_data.py  ui_main.py  ui_main_file.py  ui_raw_text.py  ui_test_data.py  ui_tree_helpers.py  undo.py  validation.py  writer.py
docs/examples/: 示例_文档字符串模板.py
docs/reports/: 团队技术提升计划.md
tests/: conftest.py  test_models.py  test_parser.py  test_validation.py  test_writer.py
