[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "borehole-data-editor"
version = "1.0.0"
description = "钻孔数据编辑工具 - 水利勘察项目钻孔数据管理"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "钻孔数据工具团队", email = "team@example.com"}
]
keywords = ["borehole", "geology", "water-conservancy", "data-editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-tk>=0.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/runoob-tan6/zksjgj"
Documentation = "https://github.com/runoob-tan6/zksjgj#readme"
Repository = "https://github.com/runoob-tan6/zksjgj"
Issues = "https://github.com/runoob-tan6/zksjgj/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RUF001", # CJK punctuation is normal in Chinese projects
    "RUF002", # CJK punctuation is normal in Chinese projects
    "RUF003", # CJK punctuation is normal in Chinese projects
]

[tool.ruff.lint.isort]
known-first-party = ["borehole_app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                     # show extra test summary for all except passed
    "-q",                      # quiet mode
    "--strict-markers",        # treat unregistered markers as errors
    "--tb=short",              # shorter traceback format
    "--cov=borehole_app",      # coverage for borehole_app
    "--cov-report=term-missing",  # show missing lines
    "--cov-report=html:coverage", # generate HTML coverage report
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ui: marks tests that require UI (deselect with '-m \"not ui\"')",
]

[tool.coverage.run]
source = ["borehole_app"]
omit = [
    "tests/*",
    "setup.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.",
    "pass",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # skip assert_used check
